fix(schema-util): address review feedback on prompt template format validation
Mirror the nested model constraints in the validator. The published schema
declares model.api as a string and model.parameters as an object, but the
validator only checked that model itself was an object, so a document could pass
FULL validity while violating the served schema.

Add PromptTemplateSchemaSyncTest, which loads prompt-template-v1.json from the
classpath and asserts that its templateFormat enum and default match the
validator. The two are maintained by hand in different modules and would
otherwise drift silently.

Log a warning when the rendering service meets a templateFormat it cannot
render. The VALIDITY rule catches this at write time, but the rule is optional
and artifacts stored before it was enabled are still rendered. Rendering
continues with mustache substitution so those artifacts keep working.

Truncate the rejected templateFormat value in the violation message, since it
comes from user supplied content and is returned in API error responses.

VALID_VARIABLE_TYPES now uses List.of to match SUPPORTED_TEMPLATE_FORMATS,
which makes the Arrays import redundant.

Signed-off-by: Akshat <akshatgupta099@gmail.com>